[gd_scene load_steps=14 format=3 uid="uid://db3wywngm12yv"]

[ext_resource type="Script" path="res://scrips/bala_normal.gd" id="1_7oeh5"]
[ext_resource type="Texture2D" uid="uid://bhqjedgag0k34" path="res://assets/arms.png" id="2_13olg"]
[ext_resource type="Texture2D" uid="uid://kqw3yhr1u5sy" path="res://lightmask.png" id="3_pwkvi"]
[ext_resource type="Material" uid="uid://dk0iihc1uph40" path="res://esenas/plataformer/carga.tres" id="4_rog62"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ek3a0"]
atlas = ExtResource("2_13olg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g730m"]
atlas = ExtResource("2_13olg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u0pw"]
atlas = ExtResource("2_13olg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pwgq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3a0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_g730m")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6u0pw")
}],
"loop": false,
"name": &"salir",
"speed": 1.0
}]

[sub_resource type="Gradient" id="Gradient_uby8f"]
offsets = PackedFloat32Array(0, 0.56383, 0.664894, 1)
colors = PackedColorArray(0.662184, 1, 0.633765, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n36a4"]
gradient = SubResource("Gradient_uby8f")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uxf8x"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.03
direction = Vector3(-1, 0, 0)
initial_velocity_min = 5.75
initial_velocity_max = 12.65
gravity = Vector3(0, 0, 0)
scale_min = 20.3
scale_max = 37.25
color_ramp = SubResource("GradientTexture1D_n36a4")

[sub_resource type="QuadMesh" id="QuadMesh_jo74m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nr7e4"]
radius = 24.0

[node name="bala normal" type="RigidBody2D" groups=["bala_player"]]
z_index = 13
mass = 0.01
gravity_scale = 0.0
script = ExtResource("1_7oeh5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.90735e-06, 4)
scale = Vector2(4, 3.6)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-20, 3.8147e-06)
rotation = 1.55691
scale = Vector2(3.375, 3.5)
sprite_frames = SubResource("SpriteFrames_5pwgq")
animation = &"salir"
autoplay = "default"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-3.8147e-06, 1.57356e-05)
color = Color(0, 1, 0, 1)
texture = ExtResource("3_pwkvi")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(16, 0)
scale = Vector2(5.405, 5.405)
amount = 70
process_material = SubResource("ParticleProcessMaterial_uxf8x")
speed_scale = 15.9

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
self_modulate = Color(0, 1, 0, 0)
position = Vector2(32, 0)
mesh = SubResource("QuadMesh_jo74m")

[node name="GPUParticles2D5" type="GPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 80
process_material = ExtResource("4_rog62")
one_shot = true
speed_scale = 1.85
explosiveness = 0.35

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_nr7e4")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
