[gd_scene load_steps=20 format=3 uid="uid://b6htiu0nvq8k5"]

[ext_resource type="Script" path="res://scrips/bala_normal.gd" id="1_ss8ad"]
[ext_resource type="Texture2D" uid="uid://bhqjedgag0k34" path="res://assets/arms.png" id="2_ecr5b"]
[ext_resource type="Texture2D" uid="uid://b8mk3ve4ngjrj" path="res://Retro Impact Effect Pack ALL/Retro Impact Effect Pack 2 C.png" id="3_ppbk3"]
[ext_resource type="Texture2D" uid="uid://kqw3yhr1u5sy" path="res://lightmask.png" id="4_rafrc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nr7e4"]
radius = 40.0

[sub_resource type="Animation" id="Animation_4tbgl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D2/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.00242716]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:gravity_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.02648, 5.89341)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PointLight2D:energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ktls6"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.00242716, 1.75231]
}

[sub_resource type="Animation" id="Animation_ah42r"]
resource_name = "new_animation_2"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D2/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [10.0, 240.0, 10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"salir"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:gravity_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6.02648, 5.89341), Vector2(17.966, 17.569)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PointLight2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_75645"]
_data = {
"RESET": SubResource("Animation_4tbgl"),
"new_animation": SubResource("Animation_ktls6"),
"new_animation_2": SubResource("Animation_ah42r")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4bew7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n1rle"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rouou"]
atlas = ExtResource("2_ecr5b")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoiiw"]
atlas = ExtResource("2_ecr5b")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmv7t"]
atlas = ExtResource("3_ppbk3")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3kl4"]
atlas = ExtResource("3_ppbk3")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptesl"]
atlas = ExtResource("3_ppbk3")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdde0"]
atlas = ExtResource("3_ppbk3")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_teeyw"]
atlas = ExtResource("3_ppbk3")
region = Rect2(576, 640, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6n6ob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rouou")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rouou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoiiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmv7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3kl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptesl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdde0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teeyw")
}],
"loop": false,
"name": &"salir",
"speed": 9.0
}]

[node name="bombala" type="RigidBody2D" groups=["bala_player"]]
gravity_scale = 6.0
script = ExtResource("1_ss8ad")
bomba = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_nr7e4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.90735e-06, 4)
scale = Vector2(4, 3.6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_75645")
}
autoplay = "new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4056, -2032)
shape = SubResource("CircleShape2D_4bew7")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_n1rle")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
texture_filter = 1
position = Vector2(-24, 16)
rotation = -0.00242716
scale = Vector2(6.02648, 5.89341)
sprite_frames = SubResource("SpriteFrames_6n6ob")
autoplay = "default"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-12, 32)
scale = Vector2(3.09375, 2.875)
color = Color(0, 1, 1, 1)
energy = 0.0
texture = ExtResource("4_rafrc")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
